k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: codefactory
  labels:
    name: codefactory
    app: codefactory
